# polycal

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  deny.toml  flake.nix  justfile  rust-toolchain.toml
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: audit-on-push.yml  ci.yml  coverage.yml  release.yml  scheduled-audit.yml  spellcheck.yml
examples/: thermistor_calibration.rs
polycal/: Cargo.toml  build_rs_cov.profraw  deny.toml  rust-toolchain.toml  rustc-ice-2025-04-04T11_51_05-60729.txt
polycal/src/: _builder.rs  _problem.rs  builder.rs  calculate.rs  error.rs  lib.rs  problem.rs  utils.rs
polycal/src/chebyshev/: basis.rs  builder.rs  mod.rs  primitive.rs  series.rs
polycal/src/solvers/: mod.rs  total_least_squares.rs  weighted_least_squares.rs
src/: builder.rs  calculate.rs  chebyshev.rs  error.rs  eval.rs  evaluation.rs  fit.rs  lib.rs  problem.rs  score.rs  series.rs  solvers.rs  utils.rs
src/chebyshev/: basis.rs  builder.rs  mod.rs  primitive.rs  series.rs
src/solve/: constrained.rs  mod.rs  unconstrained.rs
src/solvers/: mod.rs  total_least_squares.rs  weighted_least_squares.rs
tests/: basic_calibration.rs
