[package]
name = "polycal"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Christopher Gubbin <chris.gubbin@gmail.com>"]
description = "methods for fitting and using polynomial calibration functions following ISO/TS 28038"


[dependencies]
cert = "0.1"
num-traits = "0.2"
tracing = "0.1.40"
rand_isaac = "0.3.0"
thiserror = "1.0.67"
time = "0.3.36"
argmin = { version = "0.10", features = ["_ndarrayl"] }
argmin-math = "0.4.0"
argmin-observer-slog = "0.1.0"
blas-src = { version = "0.8", features = ["openblas"] }
openblas-src = { version = "0.10", features = ["cblas"] }
ndarray = { version = "0.15", features = ["blas"] }
ndarray-linalg = "0.16.0"
ndarray-rand = "0.14.0"

[features]
sysblas = ["openblas-src/system"]
statblas = ["openblas-src/static"]
default = ["sysblas"]


[dev-dependencies]
approx = "0.5.1"
