[package]
name = "polycal"
version = "0.1.10"
edition = "2024"
rust-version = "1.85"
license = "MIT"
authors = ["Christopher Gubbin <chris.gubbin@gmail.com>"]
description = "methods for fitting and using polynomial calibration functions following ISO/TS 28038"
repository = "https://github.com/sensoriumtl/polycal"

[lib]
name = "polycal"    # The name of the target.
path = "src/lib.rs" # The source file of the target.


[dependencies]
ndarray = "0.17.2"
polynomial_series = {path = "../../poly_series", default-features = false}
serde = { version = "1.0.228", optional = true }

[features]
default = ["openblas-system"]

openblas-system = [
  "polynomial_series/linalg-openblas-system",
]
serde = ["dep:serde"]

# openblas-static = [
#   "polynomial-series/linalg-openblas-static",
# ]

# netlib-system = [
#   "polynomial-series/linalg-netlib-system",
# ]

# netlib-static = [
#   "polynomial-series/linalg-netlib-static",
# ]

# intel-mkl-system = [
#   "polynomial-series/linalg-intel-mkl-system",
# ]

# intel-mkl-static = [
#   "polynomial-series/linalg-intel-mkl-static",
# ]


[dev-dependencies]
approx = "0.5.1"
